@@ -1,7 +1,14 @@
-public class aman
+class Hello
 {
-    public static void main(String[] args) {
-        
+    public static void main(String argg[])
+    {
         System.out.println("Hello World");
     }
-}   
+}
+
+void main()
+{
+    System.out.println("hello java 21");
+}
+// to compile : javac --enable-preview --source 21 Hello.java
+// to run : java --enable-preview Hello
